# wfs-labelflow

./: .gitignore  AGENTS.md  Makefile  README.md  STATE.md  app.py  pyproject.toml  start.bat  start.command  wfs_label_processing_requirements.md
app/: config.py  errors.py  main.py  models.py
app/services/: archive_ingest.py  classifier.py  dispatch.py  excel_mapping.py  job_processor.py  output_builder.py  pairing.py  pdf_processor.py  registry.py  storage.py  validation.py  zpl_parser.py
app/static/: app.js  styles.css
app/templates/: index.html
docs/superpowers/plans/: 2026-07-04-wfs-label-flow-mvp.md  2026-07-05-wfs-label-flow-public-github.md  2026-07-09-wfs-zip-excel-dispatch-plan.md
docs/superpowers/specs/: 2026-07-04-wfs-label-flow-design.md  2026-07-09-wfs-zip-excel-dispatch-design.md
scripts/: inspect_sample.py
tests/: conftest.py  test_health.py
tests/api/: test_index.py  test_jobs_api.py  test_retention.py
tests/browser/: test_production_flow.py
tests/fixtures/sample/: WFS Label-Sample.txt
tests/integration/: test_job_processor.py
tests/unit/: test_archive_ingest.py  test_classifier.py  test_dispatch.py  test_excel_mapping.py  test_models.py  test_output_builder.py  test_pdf_processor.py  test_storage.py  test_validation_and_pairing.py  test_zpl_parser.py
