[project]
name = "wfs-labelflow"
version = "0.1.0"
description = "Local WFS and logistics label validation and PDF assembly tool"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "jinja2",
  "pypdf",
  "python-multipart",
  "uvicorn[standard]",
]

[dependency-groups]
dev = [
  "httpx",
  "pytest",
  "pytest-asyncio",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
