[project]
name = "wfs-labelflow"
version = "0.1.0"
description = "Local WFS and logistics label validation and PDF assembly tool"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "jinja2",
  "openpyxl",
  "pypdf",
  "python-multipart",
  "uvicorn[standard]",
]

[dependency-groups]
dev = [
  "httpx",
  "playwright>=1.61.0",
  "pytest",
  "pytest-asyncio",
  "pytest-playwright>=0.8.0",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
